<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="thiagocury.eti.br.minutotrem.FragCartaoSim">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Linear Geral -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Linear para Cartão Sim -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/lineartitulos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:text="@string/frag_cartao_sim_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView32"
                    style="@style/titulos"
                    android:textAlignment="center"/>

                <View
                android:layout_width="fill_parent"
                android:focusable="false"
                style="@style/view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/frag_cartao_sim_descricao"
                    android:id="@+id/textView2"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/textView7"
                    android:layout_alignParentEnd="true"
                    style="@style/textos"/>


                <TextView
                    android:text="@string/frag_cartao_sim_descricao_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView33"
                    style="@style/textosimportante"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <!-- Linear mais info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/linearconteudos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frag_cartao_sim_mais_informacoes"
                    android:id="@+id/textView"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    style="@style/titulos"/>

            </LinearLayout>


            <!-- Linear para EPTC -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/linearconteudos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/frag_cartao_sim_telefone_1_descricao"
                    android:id="@+id/textView9"
                    android:layout_below="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    style="@style/titulos" />

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/frag_cartao_sim_telefone_1"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/textView"
                    android:layout_alignEnd="@+id/textView"
                    android:autoLink="phone"
                    style="@style/textos"/>

            </LinearLayout>

                <!-- Linear para TRENSURB -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/linearconteudos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/frag_cartao_sim_telefone_2_descricao"
                    android:id="@+id/textView10"
                    android:layout_below="@+id/textView9"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/frag_cartao_sim_telefone_2"
                    android:id="@+id/textView7"
                    android:layout_below="@+id/textView10"
                    android:autoLink="phone"
                    style="@style/textos"/>

            </LinearLayout>

                <!-- Linear para "PELO SITE" -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/linearconteudos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frag_cartao_sim_pelo_site_descricao"
                    android:id="@+id/textView12"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frag_cartao_sim_pelo_site"
                    android:id="@+id/textView11"
                    android:autoLink="web"
                    style="@style/textos"/>

            </LinearLayout>

            <!-- para mais info, acesse.... -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/linearconteudos"
                android:background="@drawable/layout_shadow_white"
                android:layout_marginBottom="0.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frag_cartao_sim_pelo_site_mais_info"
                    android:id="@+id/textView14"
                    android:layout_above="@+id/textView13"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frag_cartao_sim_mais_info_link"
                    android:id="@+id/textView13"
                    android:layout_alignParentBottom="true"
                    android:autoLink="web"
                    style="@style/textos"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
