<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey200"
    tools:context="thiagocury.eti.br.minutotrem.FragSobre">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Linear geral -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Linear para sobre o app -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/lineartitulos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:id="@+id/frag_sobre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/frag_sobre"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_sobre_versao"
                    style="@style/textos"
                    android:textColor="@color/grey800"
                  />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_sobre_data"
                    style="@style/textos"
                    android:textColor="@color/grey800"/>


            </LinearLayout>

            <!-- Linear para desenvolvedor -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/lineartitulos"
                android:background="@drawable/layout_shadow_white">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_sobre_desenvolvedor"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/sobre_largura"
                    android:layout_height="@dimen/sobre_altura"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/esp_img"
                    android:background="@drawable/cluster"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/esp_img"
                    android:autoLink="web"
                    android:text="@string/frag_sobre_site"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/texto"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/esp_img"
                    android:autoLink="email"
                    android:text="@string/frag_sobre_email"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/texto"/>

            </LinearLayout>


            <!-- Linear para desenvolvedores parceiros -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/lineartitulos"
                android:background="@drawable/layout_shadow_white"
                android:layout_marginBottom="0.5dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_sobre_desenvolvedores_auxiliares_titulo"
                    style="@style/titulos"/>

                <View
                    android:layout_width="fill_parent"
                    android:focusable="false"
                    style="@style/view"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/esp_img"
                    android:text="@string/frag_sobre_desenvolvedores_auxiliares"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/texto" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>
